<resources>
    <string name="app_name">TestFragment</string>
    <string name="button">YourAppName</string>
    <string name="main">Main Activity</string>
    <string name="firstFragment">FIRST FRAGMENT</string>
    <string name="secondFragment">SECOND FRAGMENT</string>
    <string name="hint1">Message to Sub</string>
    <string name="hint2">Message to Main</string>
    <string name="to_main">"  to Main"</string>
    <string name="from_main">"from Main"</string>
    <string name="to_sub">"  to Sub"</string>
    <string name="from_sub">"from Sub"</string>
    <string name="move">move</string>
    <string name="back">back</string>
</resources>
